--- a/src/B2NetClient/Views/ListView/FolderView.xaml
+++ b/src/B2NetClient/Views/ListView/FolderView.xaml
@@ -1,20 +1,24 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:ViewModels="clr-namespace:FileExplorer.ViewModels.ListView">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ViewModels="clr-namespace:FileExplorer.ViewModels.ListView">
     <DataTemplate DataType="{x:Type ViewModels:FolderViewModel}">
         <StackPanel Orientation="Horizontal">
-            <Image Source="{StaticResource Folder}" Width="20" Height="20">
+            <Image
+                Width="20"
+                Height="20"
+                Source="{StaticResource Folder}">
                 <Image.Style>
-                    <Style TargetType="Image" BasedOn="{StaticResource {x:Type Image}}">
+                    <Style BasedOn="{StaticResource {x:Type Image}}" TargetType="Image">
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding Folder.IsHidden}" Value="True">
-                                <Setter Property="Opacity" Value="0.5"/>
+                                <Setter Property="Opacity" Value="0.5" />
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </Image.Style>
             </Image>
-            <TextBlock Text="{Binding DisplayName}" Margin="5, 0"/>
+            <TextBlock Margin="5,0" Text="{Binding DisplayName}" />
         </StackPanel>
     </DataTemplate>
 </ResourceDictionary>
