--- a/src/B2NetClient/Views/MainView.xaml
+++ b/src/B2NetClient/Views/MainView.xaml
@@ -10,15 +10,23 @@
     mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
+			<ColumnDefinition />
+			<ColumnDefinition Width="Auto" />
+			
+			<ColumnDefinition />
             <ColumnDefinition Width="Auto" />
+			
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
 
-        <ContentControl Caliburn:View.Model="{Binding FileSystemStructureViewModel}" />
+		<ContentControl Caliburn:View.Model="{Binding AuthenticationViewModel}" />
 
-        <GridSplitter Grid.Column="1" />
+		<GridSplitter Grid.Column="1" />
 
-        <ContentControl Grid.Column="2" Caliburn:View.Model="{Binding FolderContentViewModel}" />
+		<ContentControl  Grid.Column="2" Caliburn:View.Model="{Binding FileSystemStructureViewModel}" />
+
+        <GridSplitter Grid.Column="3" />
+
+        <ContentControl Grid.Column="4" Caliburn:View.Model="{Binding FolderContentViewModel}" />
     </Grid>
 </UserControl>
