--- a/src/B2NetClient/Views/FileSystemStructureView.xaml
+++ b/src/B2NetClient/Views/FileSystemStructureView.xaml
@@ -16,14 +16,13 @@
         </Grid.RowDefinitions>
         <Border>
             <DockPanel>
-                <Button DockPanel.Dock="Right" Command="{Binding RefreshCommand}">
-                    <fa:ImageAwesome
+				<Button Command="{Binding RefreshCommand}" DockPanel.Dock="Right">
+					<fa:ImageAwesome
                         Height="10"
                         Margin="5"
                         Icon="Refresh" />
-                </Button>
-            </DockPanel>
-
+				</Button>
+			</DockPanel>
         </Border>
         <TreeView
             Grid.Row="1"
