--- a/src/B2NetClient/Views/FolderContentView.xaml
+++ b/src/B2NetClient/Views/FolderContentView.xaml
@@ -1,26 +1,59 @@
-﻿<UserControl x:Class="FileExplorer.Views.FolderContentView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:ViewModels="clr-namespace:FileExplorer.ViewModels"
-             xmlns:Caliburn="http://www.caliburnproject.org"
-             mc:Ignorable="d"
-			 d:DataContext="{d:DesignInstance ViewModels:FolderContentViewModel}">
-    <ListBox ItemsSource="{Binding Entries}">
-        <ListBox.Resources>
-            <ResourceDictionary>
-                <ResourceDictionary.MergedDictionaries>
-                    <ResourceDictionary Source="/Views/ListView/FileView.xaml"/>
-                    <ResourceDictionary Source="/Views/ListView/FolderView.xaml"/>
-                </ResourceDictionary.MergedDictionaries>
-            </ResourceDictionary>
-        </ListBox.Resources>
-        
-        <ListBox.ItemContainerStyle>
-            <Style TargetType="ListBoxItem" BasedOn="{StaticResource {x:Type ListBoxItem}}">
-                <Setter Property="Caliburn:Message.Attach" Value="[Event MouseDoubleClick] = [DoubleClick]"/>
-            </Style>
-        </ListBox.ItemContainerStyle>
-    </ListBox>
+﻿<UserControl
+    x:Class="FileExplorer.Views.FolderContentView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Caliburn="http://www.caliburnproject.org"
+    xmlns:ViewModels="clr-namespace:FileExplorer.ViewModels"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fa="http://schemas.fontawesome.io/icons/"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DataContext="{d:DesignInstance ViewModels:FolderContentViewModel}"
+    mc:Ignorable="d">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Border HorizontalAlignment="Right">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+
+                <Button Command="{Binding UploadCommand}">
+                    <fa:ImageAwesome
+                        Height="10"
+                        Margin="5"
+                        Icon="Upload" />
+                </Button>
+
+                <Button Grid.Column="1" Command="{Binding RefreshCommand}">
+                    <fa:ImageAwesome
+                        Height="10"
+                        Margin="5"
+                        Icon="Refresh" />
+                </Button>
+            </Grid>
+        </Border>
+
+        <ListBox Grid.Row="1" ItemsSource="{Binding Entries}">
+            <ListBox.Resources>
+                <ResourceDictionary>
+                    <ResourceDictionary.MergedDictionaries>
+                        <ResourceDictionary Source="/Views/ListView/FileView.xaml" />
+                        <ResourceDictionary Source="/Views/ListView/FolderView.xaml" />
+                    </ResourceDictionary.MergedDictionaries>
+                </ResourceDictionary>
+            </ListBox.Resources>
+
+            <ListBox.ItemContainerStyle>
+                <Style BasedOn="{StaticResource {x:Type ListBoxItem}}" TargetType="ListBoxItem">
+                    <Setter Property="Caliburn:Message.Attach" Value="[Event MouseDoubleClick] = [DoubleClick]" />
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
+
+	
+	</Grid>
 </UserControl>
