--- a/src/B2NetClient/Views/FolderContentView.xaml
+++ b/src/B2NetClient/Views/FolderContentView.xaml
@@ -19,16 +19,25 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
                 </Grid.ColumnDefinitions>
 
-                <Button Command="{Binding UploadCommand}">
+                <Button Command="{Binding UploadCommand}" ToolTip="Add folder">
+                    <fa:ImageAwesome
+                        Height="10"
+                        Margin="5"
+                        Icon="Plus" />
+                </Button>
+
+
+				<Button Command="{Binding UploadCommand}" Grid.Column="1" ToolTip="Upload file">
                     <fa:ImageAwesome
                         Height="10"
                         Margin="5"
                         Icon="Upload" />
                 </Button>
 
-                <Button Grid.Column="1" Command="{Binding RefreshCommand}">
+				<Button Grid.Column="2" Command="{Binding RefreshCommand}" ToolTip="Refresh">
                     <fa:ImageAwesome
                         Height="10"
                         Margin="5"
@@ -54,6 +63,6 @@
             </ListBox.ItemContainerStyle>
         </ListBox>
 
-	
-	</Grid>
+
+    </Grid>
 </UserControl>
