--- a/src/B2NetClient/Views/ListView/UploadFileView.xaml
+++ b/src/B2NetClient/Views/ListView/UploadFileView.xaml
@@ -3,17 +3,39 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fa="http://schemas.fontawesome.io/icons/"
     xmlns:local="clr-namespace:FileExplorer.Views.ListView"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid>
-        <TextBlock Text="Drag file in here" />
-        <Grid
-            Name="ImagePanel"
-            AllowDrop="true"
-            Background="Transparent"
-            Drop="ImagePanel_Drop" />
-    </Grid>
+    <Border Background="White" CornerRadius="5">
+        <Border.Effect>
+            <DropShadowEffect
+                Opacity="0.5"
+                ShadowDepth="0.2"
+                Color="#1F2123" />
+        </Border.Effect>
+        <Grid Width="600" Height="600">
+            <Border
+                Margin="5"
+                BorderBrush="Gray"
+                BorderThickness="1"
+                CornerRadius="10">
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <fa:ImageAwesome
+                        Height="40"
+                        Margin="0,0,0,10"
+                        Foreground="Gray"
+                        Icon="Upload" />
+                    <TextBlock Foreground="Gray" Text="Drag file in here" />
+                </StackPanel>
+            </Border>
+
+            <Grid
+                Name="ImagePanel"
+                AllowDrop="true"
+                Background="Transparent"
+                Drop="ImagePanel_Drop" />
+        </Grid>
+    </Border>
+
 </UserControl>
