--- a/src/B2NetClient/Views/MainView.xaml
+++ b/src/B2NetClient/Views/MainView.xaml
@@ -5,8 +5,9 @@
     xmlns:Caliburn="http://www.caliburnproject.org"
     xmlns:ViewModels="clr-namespace:FileExplorer.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:folders="clr-namespace:FileExplorer.Views.ListView"
+    xmlns:listView="clr-namespace:FileExplorer.Views.ListView"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:Name="MainScreen"
     d:DataContext="{d:DesignInstance ViewModels:MainViewModel}"
     mc:Ignorable="d">
     <Grid>
@@ -30,9 +31,15 @@
 
         <ContentControl Grid.Column="4" Caliburn:View.Model="{Binding FolderContentViewModel}" />
 
-        <Popup IsOpen="True">
-
-            <TextBox Background="Red">23223333</TextBox>
-        </Popup>
+        <Border
+			x:Name="PopupBorder"
+            Grid.ColumnSpan="5"
+			PreviewMouseDown="Border_PreviewMouseDown"
+            Width="{Binding ActualWidth, ElementName=MainScreen}"
+            Height="{Binding ActualHeight, ElementName=MainScreen}"
+            Background="Transparent"
+            Visibility="{Binding UploadFileDiablogVisibility}">
+			<listView:UploadFileView HorizontalAlignment="Center" VerticalAlignment="Center" />
+        </Border>
     </Grid>
 </UserControl>
