--- a/src/B2NetClient/Views/FileSystemStructureView.xaml
+++ b/src/B2NetClient/Views/FileSystemStructureView.xaml
@@ -29,11 +29,11 @@
             ItemsSource="{Binding Drives}"
             VirtualizingStackPanel.IsVirtualizing="True"
             VirtualizingStackPanel.VirtualizationMode="Recycling">
-            <TreeView.ContextMenu>
+            <!--<TreeView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Command="{Binding RefreshCommand}">Refresh</MenuItem>
                 </ContextMenu>
-            </TreeView.ContextMenu>
+            </TreeView.ContextMenu>-->
             <TreeView.Resources>
                 <ResourceDictionary>
                     <ResourceDictionary.MergedDictionaries>
