--- a/src/B2NetClient/Views/FolderContentView.xaml
+++ b/src/B2NetClient/Views/FolderContentView.xaml
@@ -22,26 +22,31 @@
                     <ColumnDefinition Width="auto" />
                 </Grid.ColumnDefinitions>
 
-                <Button Command="{Binding UploadCommand}" ToolTip="Add folder">
+                <Button Command="{Binding AddFolderCommand}" ToolTip="Add folder">
                     <fa:ImageAwesome
                         Height="10"
                         Margin="5"
                         Icon="Plus" />
                 </Button>
 
-
-				<Button Command="{Binding UploadCommand}" Grid.Column="1" ToolTip="Upload file">
+                <Button
+                    Grid.Column="1"
+                    Command="{Binding UploadCommand}"
+                    ToolTip="Upload file">
                     <fa:ImageAwesome
                         Height="10"
                         Margin="5"
                         Icon="Upload" />
                 </Button>
 
-				<Button Grid.Column="2" Command="{Binding RefreshCommand}" ToolTip="Refresh">
+                <Button
+                    Grid.Column="2"
+                    Command="{Binding DownloadCommand}"
+                    ToolTip="Refresh">
                     <fa:ImageAwesome
                         Height="10"
                         Margin="5"
-                        Icon="Refresh" />
+                        Icon="Download" />
                 </Button>
             </Grid>
         </Border>
@@ -62,7 +67,5 @@
                 </Style>
             </ListBox.ItemContainerStyle>
         </ListBox>
-
-
     </Grid>
 </UserControl>
