--- a/src/B2NetClient/Views/ListView/FolderView.xaml
+++ b/src/B2NetClient/Views/ListView/FolderView.xaml
@@ -4,6 +4,8 @@
     xmlns:ViewModels="clr-namespace:FileExplorer.ViewModels.ListView">
     <DataTemplate DataType="{x:Type ViewModels:FolderViewModel}">
         <StackPanel Orientation="Horizontal">
+            <CheckBox IsChecked="{Binding IsSelected}" />
+
             <Image
                 Width="20"
                 Height="20"
