--- a/src/B2NetClient/Views/AuthenticationView.xaml
+++ b/src/B2NetClient/Views/AuthenticationView.xaml
@@ -11,7 +11,7 @@
     d:DataContext="{d:DesignInstance ViewModels:AuthenticationViewModel}"
     mc:Ignorable="d">
     <Border
-        Margin="0,24,0,0"
+        Margin="0,44,0,0"
         BorderBrush="Gray"
         BorderThickness="1">
         <StackPanel>
@@ -22,18 +22,24 @@
                 <StackPanel>
                     <StackPanel>
                         <TextBlock Text="AppID" />
-                        <TextBox Margin="0,5,0,0" Text="{Binding AppId}" />
+                        <TextBox
+                            Height="25"
+                            Margin="0,5,0,0"
+                            Text="{Binding AppId}" />
                     </StackPanel>
 
                     <StackPanel Margin="0,10,0,0">
                         <TextBlock Text="App Key" />
-                        <TextBox Margin="0,5,0,0" Text="{Binding AppKey}" />
+                        <TextBox
+                            Height="25"
+                            Margin="0,5,0,0"
+                            Text="{Binding AppKey}" />
                     </StackPanel>
 
                     <Button
-                        Width="50"
+                        Height="25"
                         Margin="0,10,0,0"
-                        HorizontalAlignment="Right"
+                        HorizontalAlignment="Stretch"
                         Caliburn:Message.Attach="SaveAccountCommand"
                         Content="Save" />
                 </StackPanel>
