--- a/src/B2NetClient/Views/ShellView.xaml
+++ b/src/B2NetClient/Views/ShellView.xaml
@@ -7,6 +7,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="B2StorageClient"
+    Width="1200"
+    Height="600"
     d:DataContext="{d:DesignInstance ViewModels:ShellViewModel}"
     mc:Ignorable="d">
     <ContentControl Caliburn:View.Model="{Binding MainViewModel}" />
