implement update file feature

--- a/src/B2NetClient/Views/LogView.xaml
+++ b/src/B2NetClient/Views/LogView.xaml
@@ -13,5 +13,6 @@
         MaxHeight="200"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Bottom"
-        Text="{Binding Log}" />
+        Text="{Binding Log}"
+        TextWrapping="Wrap" />
 </UserControl>
