--- a/src/B2NetClient/App.xaml
+++ b/src/B2NetClient/App.xaml
@@ -1,35 +1,36 @@
-﻿<Application x:Class="FileExplorer.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-			 xmlns:FileExplorer="clr-namespace:FileExplorer">
+﻿<Application
+    x:Class="FileExplorer.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:FileExplorer="clr-namespace:FileExplorer">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary>
-                    <FileExplorer:AppBootstrapper x:Key="Bootstrapper"/>
+                    <FileExplorer:AppBootstrapper x:Key="Bootstrapper" />
                 </ResourceDictionary>
-                
-                <ResourceDictionary Source="Themes/Brushes.xaml"/>
-                <ResourceDictionary Source="Themes/Geometries.xaml"/>
-                <ResourceDictionary Source="Themes/Images.xaml"/>
-                <ResourceDictionary Source="Themes/Styles.xaml"/>
+
+                <ResourceDictionary Source="Themes/Brushes.xaml" />
+                <ResourceDictionary Source="Themes/Geometries.xaml" />
+                <ResourceDictionary Source="Themes/Images.xaml" />
+                <ResourceDictionary Source="Themes/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <Style TargetType="Image">
-                <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
+                <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality" />
             </Style>
 
             <Style TargetType="ListBox">
-                <Setter Property="SelectionMode" Value="Single"/>
+                <Setter Property="SelectionMode" Value="Single" />
             </Style>
 
             <Style TargetType="ListView">
-                <Setter Property="SelectionMode" Value="Single"/>
+                <Setter Property="SelectionMode" Value="Single" />
             </Style>
 
             <Style TargetType="TextBlock">
-                <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="TextTrimming" Value="CharacterEllipsis" />
+                <Setter Property="VerticalAlignment" Value="Center" />
             </Style>
         </ResourceDictionary>
     </Application.Resources>
