--- a/src/B2NetClient/Views/TreeView/CreateFolderView.xaml
+++ b/src/B2NetClient/Views/TreeView/CreateFolderView.xaml
@@ -24,23 +24,28 @@
                 <StackPanel>
                     <StackPanel>
                         <TextBlock Text="Folder name" />
-                        <TextBox Margin="0,5,0,0" Text="{Binding FolderName}" />
+                        <TextBox
+                            Height="25"
+                            Margin="0,5,0,0"
+                            Text="{Binding FolderName}" />
                     </StackPanel>
 
                     <DockPanel Margin="0,20,0,0">
                         <Button
-                            Width="50"
+                            Width="100"
+                            Height="25"
                             Margin="0,10,0,0"
                             HorizontalAlignment="Left"
-                            Caliburn:Message.Attach="SaveCommand"
-                            Content="Save" />
+                            Command="{Binding CancelCommand}"
+                            Content="Cancel" />
 
                         <Button
-                            Width="50"
+                            Width="100"
+                            Height="25"
                             Margin="0,10,0,0"
                             HorizontalAlignment="Right"
-                            Caliburn:Message.Attach="CancelCommand"
-                            Content="Cancle" />
+                            Command="{Binding SaveCommand}"
+                            Content="Save" />
                     </DockPanel>
                 </StackPanel>
             </Border>
